# shift-planning

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  test-requirements.txt
hr_shift/: README.rst  __manifest__.py
hr_shift/i18n/: hr_shift.pot
hr_shift/models/: resource_calendar.py  shift_planning.py  shift_template.py
hr_shift/static/description/: index.html
hr_shift/static/src/js/: field_utils.esm.js  generate_planning.esm.js
hr_shift/static/src/xml/: generate_planning_views.xml
hr_shift/views/: res_config_settings_views.xml  shift_planning_views.xml  shift_template_views.xml
hr_shift/wizards/: shift_planning_wizard_views.xml
hr_shift_holidays_public/: README.rst  __manifest__.py
hr_shift_holidays_public/models/: shift_planning_line.py
hr_shift_holidays_public/static/description/: index.html
hr_shift_holidays_public/tests/: test_hr_shift_holidays_public.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
setup/hr_shift_holidays_public/odoo/addons/: hr_shift_holidays_public
