[project]
name = "odoo-addons-oca-shift-planning"
version = "17.0.20250901.0"
dependencies = [
    "odoo-addon-hr_shift>=17.0dev,<17.1dev",
    "odoo-addon-hr_shift_holidays_public>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
